<resources>
    <string name="app_name">Flash OEM Logo</string>

    <string name="flash_image">Flash image</string>
    <string name="action_settings">Settings</string>
    <string name="textAppVersion" translatable="false">Huawei OEM Logo Flasher</string>
    <string name="textFlash">Flash</string>
    <string name="textTapToSelect">Tap to select image</string>
    <string name="textPleaseWait">Please wait...</string>
    <string name="textFlashImage">Flash Image</string>
    <string name="textFlashOEMLogoMBN">Flash /cust/media/oemlogo.mbn</string>
    <string name="textNoMBN">Place oemlogo.mbn at /cust/media/</string>
    <string name="textNoMBNError">File Error</string>
    <string name="bsdClause">
        <![CDATA[
            <html>
            <head></head>
            <body style="text-align:justify;color:gray;font-size:10pt">
                THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
                ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
                WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
                DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
                ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
                (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
                LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
                ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
                (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
                SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
            </body>
            </html>
        ]]>
    </string>
    <string name="title_activity_main_activity2" translatable="false">MainActivity2Activity</string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="title_activity_color_settings">Color Downsampling</string>
    <string name="textNoDownsampling">No downsampling</string>
    <string name="textDownsamplingExplanation">If the flashed image looks glitchy, try different settings for color downsampling (ffmpeg is recommended). Choose \'No downsampling\' if you have preprocessed image.</string>
    <string name="textColorSettings">Color Settings</string>
    <string name="textSupportedHardware">List of supported hardware</string>
    <string name="title_activity_supported_hardware">Supported Hardware</string>
    <string name="textHardwareWarning">Use the application at your own risk if your hardware isn\'t listed here. It may potentially make your phone useless even if the model is supported.</string>
    <string name="textRGB444">RGB 444 (ffmpeg)</string>
    <string name="textRGB454">RGB 454 (internal)</string>
    <string name="textRGB555">RGB 555 (internal)</string>
    <string name="textRGB565">RGB 565 (internal)</string>
    <string name="textRGB565table">RGB 565 (internal, table)</string>
    <string name="text565ff">RGB 565 (ffmpeg)</string>
    <string name="textRGB555ff">RGB555 (ffmpeg)</string>
    <string name="textProceed">Do you want to proceed?</string>
    <string name="textCancel">Cancel</string>
</resources>
